[gd_scene load_steps=11 format=2]

[ext_resource path="res://Levels/TemplateLevel.tscn" type="PackedScene" id=1]
[ext_resource path="res://Lightmaps/torchmap.png" type="Texture" id=2]
[ext_resource path="res://Doors/Door.tscn" type="PackedScene" id=3]
[ext_resource path="res://Loot/Briefcase.tscn" type="PackedScene" id=4]
[ext_resource path="res://Levels/Tutorial.gd" type="Script" id=5]
[ext_resource path="res://GFX/Interface/PNG/crossair_blueOutline.png" type="Texture" id=6]
[ext_resource path="res://SFX/message.wav" type="AudioStream" id=7]
[ext_resource path="res://Interface/TutorialGUI.tscn" type="PackedScene" id=8]
[ext_resource path="res://Interface/MessageTemplate.tscn" type="PackedScene" id=9]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 64, 64 )

[node name="Tutorial" instance=ExtResource( 1 )]
script = ExtResource( 5 )

[node name="TutorialGUI" parent="." index="0" instance=ExtResource( 8 )]

[node name="TileMap" parent="Navigation2D" index="0"]
tile_data = PoolIntArray( -1245172, 1, 0, -1245171, 1, 2, -1245170, 1, 2, -1245169, 1, 2, -1245168, 1, 2, -1245167, 1, 2, -1245166, 1, 3, -1245165, 1, 2, -1245164, 1, 2, -1245163, 1, 2, -1245162, 1, 2, -1245161, 1, 2, -1245160, 1, 1, -1179636, 1, 65538, -1179635, 3, 1, -1179634, 3, 1, -1179633, 3, 1, -1179632, 3, 1, -1179631, 3, 1, -1179630, 1, 65538, -1179629, 3, 1, -1179628, 3, 1, -1179627, 3, 1, -1179626, 3, 1, -1179625, 3, 1, -1179624, 1, 65538, -1114100, 1, 65538, -1114099, 3, 1, -1114098, 3, 5, -1114097, 3, 5, -1114096, 3, 1, -1114095, 3, 1, -1114094, 1, 65538, -1114093, 3, 1, -1114092, 3, 3, -1114091, 3, 1, -1114090, 3, 1, -1114089, 3, 1, -1114088, 1, 65538, -983049, 1, 7, -983048, 1, 262149, -983047, 1, 2, -983046, 1, 2, -983045, 1, 2, -983044, 1, 2, -983043, 1, 2, -983042, 1, 2, -983041, 1, 2, -1048576, 1, 2, -1048575, 1, 2, -1048574, 1, 2, -1048573, 1, 2, -1048572, 1, 2, -1048571, 1, 2, -1048570, 1, 2, -1048569, 1, 2, -1048568, 1, 2, -1048567, 1, 262148, -1048566, 1, 196612, -1048565, 1, 196612, -1048564, 1, 262147, -1048563, 3, 1, -1048562, 3, 1, -1048561, 3, 1, -1048560, 3, 1, -1048559, 3, 1, -1048558, 1, 65538, -1048557, 3, 1, -1048556, 3, 3, -1048555, 3, 1, -1048554, 3, 5, -1048553, 3, 1, -1048552, 1, 65538, -917513, 1, 327682, -917512, 1, 65544, -917511, 2, 0, -917510, 2, 0, -917509, 2, 0, -917508, 2, 0, -917507, 2, 0, -917506, 2, 0, -917505, 2, 0, -983040, 2, 0, -983039, 2, 0, -983038, 2, 0, -983037, 2, 0, -983036, 2, 0, -983035, 2, 0, -983034, 2, 0, -983033, 2, 0, -983032, 2, 0, -983031, 1, 65543, -983030, 1, 131073, -983029, 1, 131078, -983028, 1, 131077, -983027, 3, 1, -983026, 3, 1, -983025, 1, 0, -983024, 1, 5, -983023, 3, 1, -983022, 1, 65538, -983021, 3, 1, -983020, 3, 1, -983019, 3, 1, -983018, 3, 1, -983017, 3, 1, -983016, 1, 65538, -851977, 1, 65538, -851976, 2, 0, -851975, 2, 0, -851974, 2, 4, -851973, 2, 0, -851972, 2, 4, -851971, 2, 0, -851970, 2, 2, -851969, 2, 2, -917504, 2, 4, -917503, 2, 2, -917502, 2, 0, -917501, 2, 0, -917500, 2, 0, -917499, 2, 4, -917498, 2, 0, -917497, 2, 2, -917496, 2, 0, -917495, 2, 0, -917494, 1, 131076, -917493, 1, 131078, -917492, 1, 131077, -917491, 3, 1, -917490, 3, 1, -917489, 1, 65538, -917488, 3, 1, -917487, 3, 1, -917486, 1, 65538, -917485, 3, 1, -917484, 1, 65542, -917483, 1, 1, -917482, 3, 1, -917481, 3, 1, -917480, 1, 65538, -786441, 1, 65538, -786440, 2, 0, -786439, 2, 0, -786438, 2, 0, -786437, 2, 4, -786436, 2, 2, -786435, 2, 2, -786434, 2, 2, -786433, 2, 2, -851968, 2, 0, -851967, 2, 2, -851966, 2, 0, -851965, 2, 4, -851964, 2, 0, -851963, 2, 2, -851962, 2, 2, -851961, 2, 0, -851960, 2, 0, -851959, 2, 0, -851958, 1, 131076, -851957, 1, 131078, -851956, 1, 131077, -851955, 3, 1, -851954, 3, 1, -851953, 1, 65538, -851952, 3, 1, -851951, 3, 1, -851950, 1, 65538, -851949, 3, 1, -851948, 3, 1, -851947, 1, 65538, -851946, 3, 1, -851945, 3, 1, -851944, 1, 65538, -720905, 1, 65538, -720904, 2, 0, -720903, 2, 4, -720902, 2, 4, -720901, 2, 2, -720900, 2, 0, -720899, 2, 0, -720898, 2, 0, -720897, 2, 0, -786432, 2, 4, -786431, 2, 0, -786430, 2, 2, -786429, 2, 2, -786428, 2, 4, -786427, 2, 0, -786426, 2, 0, -786425, 2, 2, -786424, 2, 2, -786423, 2, 0, -786422, 1, 131076, -786421, 1, 131078, -786420, 1, 131077, -786419, 3, 1, -786418, 3, 1, -786417, 1, 65538, -786416, 3, 1, -786415, 3, 1, -786414, 1, 6, -786413, 3, 1, -786412, 3, 1, -786411, 1, 65538, -786410, 3, 1, -786409, 3, 1, -786408, 1, 65538, -655369, 1, 65538, -655368, 2, 0, -655367, 2, 4, -655366, 2, 4, -655365, 2, 0, -655364, 2, 0, -655363, 2, 0, -655362, 2, 0, -655361, 2, 2, -720896, 2, 2, -720895, 2, 4, -720894, 2, 0, -720893, 2, 2, -720892, 2, 0, -720891, 2, 4, -720890, 2, 0, -720889, 2, 2, -720888, 2, 2, -720887, 2, 0, -720886, 1, 65543, -720885, 1, 196613, -720884, 1, 327685, -720883, 1, 5, -720882, 3, 1, -720881, 1, 65538, -720880, 3, 1, -720879, 3, 1, -720878, 3, 1, -720877, 3, 1, -720876, 3, 1, -720875, 1, 65538, -720874, 3, 1, -720873, 3, 1, -720872, 1, 65538, -589833, 1, 65538, -589832, 2, 0, -589831, 2, 4, -589830, 2, 0, -589829, 2, 0, -589828, 2, 0, -589827, 2, 0, -589826, 2, 2, -589825, 2, 0, -655360, 2, 2, -655359, 2, 0, -655358, 2, 0, -655357, 2, 4, -655356, 2, 4, -655355, 2, 0, -655354, 2, 4, -655353, 2, 0, -655352, 2, 2, -655351, 2, 0, -655350, 2, 0, -655349, 3, 1, -655348, 3, 1, -655347, 3, 1, -655346, 3, 1, -655345, 1, 65538, -655344, 3, 1, -655343, 3, 1, -655342, 3, 1, -655341, 3, 1, -655340, 3, 1, -655339, 1, 65538, -655338, 3, 1, -655337, 3, 1, -655336, 1, 65538, -524297, 1, 65538, -524296, 2, 0, -524295, 2, 4, -524294, 2, 2, -524293, 2, 0, -524292, 2, 0, -524291, 2, 2, -524290, 2, 0, -524289, 2, 2, -589824, 2, 0, -589823, 2, 2, -589822, 2, 4, -589821, 2, 4, -589820, 2, 0, -589819, 2, 2, -589818, 2, 4, -589817, 2, 2, -589816, 2, 4, -589815, 2, 0, -589814, 1, 7, -589813, 1, 196612, -589812, 1, 196612, -589811, 1, 196612, -589810, 1, 196612, -589809, 1, 262147, -589808, 3, 1, -589807, 3, 1, -589806, 1, 65541, -589805, 3, 1, -589804, 3, 1, -589803, 1, 65538, -589802, 3, 1, -589801, 3, 1, -589800, 1, 65538, -458761, 1, 65538, -458760, 2, 0, -458759, 2, 2, -458758, 2, 2, -458757, 2, 0, -458756, 2, 2, -458755, 2, 2, -458754, 2, 0, -458753, 2, 0, -524288, 2, 0, -524287, 2, 2, -524286, 2, 2, -524285, 2, 0, -524284, 2, 4, -524283, 2, 0, -524282, 2, 4, -524281, 2, 4, -524280, 2, 2, -524279, 2, 0, -524278, 1, 131076, -524277, 1, 131078, -524276, 1, 131078, -524275, 1, 131078, -524274, 1, 131072, -524273, 1, 327685, -524272, 1, 2, -524271, 1, 2, -524270, 1, 4, -524269, 1, 2, -524268, 1, 2, -524267, 1, 65537, -524266, 3, 1, -524265, 3, 1, -524264, 1, 65538, -393225, 1, 65538, -393224, 2, 0, -393223, 2, 2, -393222, 2, 0, -393221, 2, 0, -393220, 2, 2, -393219, 2, 2, -393218, 2, 0, -393217, 2, 4, -458752, 2, 0, -458751, 2, 0, -458750, 2, 2, -458749, 2, 2, -458748, 2, 0, -458747, 2, 4, -458746, 2, 0, -458745, 2, 0, -458744, 2, 0, -458743, 2, 0, -458742, 1, 131076, -458741, 1, 131078, -458740, 1, 131078, -458739, 1, 131078, -458738, 1, 131077, -458737, 2, 0, -458736, 2, 0, -458735, 2, 0, -458734, 2, 0, -458733, 2, 0, -458732, 2, 0, -458731, 2, 0, -458730, 2, 0, -458729, 2, 0, -458728, 1, 65538, -327689, 1, 65538, -327688, 2, 0, -327687, 2, 0, -327686, 2, 0, -327685, 2, 4, -327684, 2, 0, -327683, 2, 0, -327682, 2, 0, -327681, 2, 2, -393216, 2, 0, -393215, 2, 4, -393214, 2, 0, -393213, 2, 0, -393212, 2, 4, -393211, 2, 4, -393210, 2, 2, -393209, 2, 0, -393208, 2, 0, -393207, 2, 0, -393206, 1, 131076, -393205, 1, 131078, -393204, 1, 131072, -393203, 1, 196613, -393202, 1, 65544, -393201, 2, 0, -393200, 2, 2, -393199, 2, 0, -393198, 2, 2, -393197, 2, 4, -393196, 2, 2, -393195, 2, 2, -393194, 2, 0, -393193, 2, 0, -393192, 1, 65538, -262153, 1, 262146, -262152, 1, 8, -262151, 2, 0, -262150, 2, 0, -262149, 2, 0, -262148, 2, 0, -262147, 2, 0, -262146, 2, 0, -262145, 2, 0, -327680, 2, 0, -327679, 2, 0, -327678, 2, 0, -327677, 2, 0, -327676, 2, 0, -327675, 2, 0, -327674, 2, 0, -327673, 2, 0, -327672, 2, 0, -327671, 1, 7, -327670, 1, 196609, -327669, 1, 131078, -327668, 1, 131077, -327667, 2, 0, -327666, 2, 0, -327665, 2, 0, -327664, 2, 2, -327663, 2, 2, -327662, 2, 4, -327661, 2, 0, -327660, 2, 0, -327659, 2, 4, -327658, 2, 0, -327657, 2, 0, -327656, 1, 65538, -196617, 1, 65543, -196616, 1, 327685, -196615, 1, 2, -196614, 1, 2, -196613, 1, 2, -196612, 1, 2, -196611, 1, 2, -196610, 1, 2, -196609, 1, 2, -262144, 1, 2, -262143, 1, 2, -262142, 1, 2, -262141, 1, 2, -262140, 1, 2, -262139, 1, 2, -262138, 1, 2, -262137, 1, 2, -262136, 1, 2, -262135, 1, 327684, -262134, 1, 196613, -262133, 1, 196613, -262132, 1, 327683, -262131, 2, 0, -262130, 2, 0, -262129, 2, 0, -262128, 2, 0, -262127, 2, 2, -262126, 2, 0, -262125, 2, 0, -262124, 2, 4, -262123, 2, 2, -262122, 2, 0, -262121, 2, 0, -262120, 1, 65538, -196596, 1, 65538, -196595, 2, 0, -196594, 2, 0, -196593, 2, 0, -196592, 2, 0, -196591, 2, 0, -196590, 2, 4, -196589, 2, 2, -196588, 2, 4, -196587, 2, 0, -196586, 2, 0, -196585, 2, 0, -196584, 1, 65538, -131060, 1, 65538, -131059, 2, 0, -131058, 2, 4, -131057, 2, 0, -131056, 2, 0, -131055, 2, 0, -131054, 2, 0, -131053, 2, 4, -131052, 2, 0, -131051, 2, 4, -131050, 2, 0, -131049, 2, 0, -131048, 1, 65538, -65524, 1, 65538, -65523, 2, 0, -65522, 2, 0, -65521, 2, 2, -65520, 2, 4, -65519, 2, 2, -65518, 2, 2, -65517, 2, 0, -65516, 2, 0, -65515, 2, 2, -65514, 2, 4, -65513, 2, 0, -65512, 1, 65538, 12, 1, 65538, 13, 2, 0, 14, 2, 4, 15, 2, 0, 16, 2, 2, 17, 2, 0, 18, 2, 2, 19, 2, 4, 20, 2, 0, 21, 2, 4, 22, 2, 0, 23, 2, 0, 24, 1, 65538, 65548, 1, 65538, 65549, 2, 0, 65550, 2, 4, 65551, 2, 0, 65552, 2, 0, 65553, 2, 4, 65554, 2, 0, 65555, 2, 0, 65556, 2, 0, 65557, 2, 0, 65558, 2, 0, 65559, 2, 0, 65560, 1, 65538, 131084, 1, 65538, 131085, 2, 0, 131086, 2, 0, 131087, 2, 0, 131088, 2, 2, 131089, 2, 0, 131090, 2, 2, 131091, 2, 2, 131092, 2, 4, 131093, 2, 0, 131094, 2, 0, 131095, 2, 0, 131096, 1, 65538, 196620, 1, 65538, 196621, 2, 0, 196622, 2, 2, 196623, 2, 4, 196624, 2, 0, 196625, 2, 0, 196626, 2, 2, 196627, 2, 0, 196628, 2, 0, 196629, 2, 2, 196630, 2, 0, 196631, 2, 0, 196632, 1, 65538, 262156, 1, 65538, 262157, 2, 0, 262158, 2, 0, 262159, 2, 0, 262160, 2, 2, 262161, 2, 2, 262162, 2, 4, 262163, 2, 0, 262164, 2, 0, 262165, 2, 2, 262166, 2, 0, 262167, 2, 0, 262168, 1, 65538, 327692, 1, 65538, 327693, 2, 0, 327694, 2, 0, 327695, 2, 0, 327696, 2, 0, 327697, 2, 0, 327698, 2, 0, 327699, 2, 0, 327700, 2, 0, 327701, 2, 0, 327702, 2, 0, 327703, 2, 0, 327704, 1, 65538, 393228, 1, 65536, 393229, 1, 2, 393230, 1, 2, 393231, 1, 2, 393232, 1, 2, 393233, 1, 2, 393234, 1, 2, 393235, 1, 2, 393236, 1, 2, 393237, 1, 2, 393238, 1, 2, 393239, 1, 2, 393240, 1, 65537 )

[node name="VisionMode" parent="." index="3"]
visible = false

[node name="Door" parent="Doors" index="0" instance=ExtResource( 3 )]
position = Vector2( 928.064, -664.975 )

[node name="Briefcase" parent="Loot" index="0" instance=ExtResource( 4 )]
position = Vector2( 1043.43, -129.506 )

[node name="ObjectiveMessages" type="Node" parent="." index="10"]

[node name="WelcomMessage" parent="ObjectiveMessages" index="0" instance=ExtResource( 9 )]
message = "Welcome to your first day of training. Please proceed to the objective marker using the [W] [A] [S] [D] keys to move"

[node name="DoorMessage" parent="ObjectiveMessages" index="1" instance=ExtResource( 9 )]
message = "Excellent. Now we'll practice interacting with objects. Stand next to the door, and left-click on it with your mouse"

[node name="NightvisionMessage" parent="ObjectiveMessages" index="2" instance=ExtResource( 9 )]
message = "It's quite hard to see! You'll be working in the dark often, so you have been provided with night-vision goggles. Activate or deactivate it with the [SPACE] key"

[node name="LootMessage" parent="ObjectiveMessages" index="3" instance=ExtResource( 9 )]
message = "Before you can leave, you need to grab that suitcase!"

[node name="ExitMessage" parent="ObjectiveMessages" index="4" instance=ExtResource( 9 )]
message = "RUUUUUUUNNNNNNN!!
Now that you have the loot, you can escape through the exit"

[node name="Exit" parent="." index="12"]
margin_left = 1222.3
margin_top = 80.9574
margin_right = 1422.3
margin_bottom = 180.957

[node name="Light2D" type="Light2D" parent="." index="13"]
position = Vector2( -448.506, -898.347 )
rotation = 0.565937
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 2 )
offset = Vector2( 300, 0 )
energy = 0.5
shadow_enabled = true

[node name="Light2D2" type="Light2D" parent="." index="14"]
position = Vector2( -444.502, -323.031 )
rotation = -0.528055
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 2 )
offset = Vector2( 300, 0 )
energy = 0.5
shadow_enabled = true

[node name="Light2D3" type="Light2D" parent="." index="15"]
position = Vector2( 845.433, 378.277 )
rotation = -1.13731
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 2 )
offset = Vector2( 300, 0 )
energy = 0.5
shadow_enabled = true

[node name="Light2D4" type="Light2D" parent="." index="16"]
position = Vector2( 958.433, -578.723 )
rotation = -1.92956
scale = Vector2( 0.25, 0.35 )
texture = ExtResource( 2 )
offset = Vector2( 300, 0 )
energy = 0.5
shadow_enabled = true
shadow_item_cull_mask = 0

[node name="ObjectiveAreas" type="Node" parent="." index="17"]

[node name="MoveObjective" type="Area2D" parent="ObjectiveAreas" index="0"]
position = Vector2( 708.141, -610.282 )
collision_layer = 0
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="ObjectiveAreas/MoveObjective" index="0"]
shape = SubResource( 1 )

[node name="DoorObjective" type="Area2D" parent="ObjectiveAreas" index="1"]
position = Vector2( 927.141, -738.282 )
collision_layer = 0
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="ObjectiveAreas/DoorObjective" index="0"]
shape = SubResource( 1 )

[node name="NightvisionObjective" type="Area2D" parent="ObjectiveAreas" index="2"]
position = Vector2( 1471.14, -503.282 )
collision_layer = 0
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="ObjectiveAreas/NightvisionObjective" index="0"]
shape = SubResource( 1 )

[node name="BriefcaseObjective" type="Area2D" parent="ObjectiveAreas" index="3"]
position = Vector2( 1041.14, -136.282 )
collision_layer = 0
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="ObjectiveAreas/BriefcaseObjective" index="0"]
shape = SubResource( 1 )

[node name="ObjectivePositions" type="Node" parent="." index="18"]

[node name="MoveObjective" type="Position2D" parent="ObjectivePositions" index="0"]
position = Vector2( 769.534, -607.119 )

[node name="DoorObjective" type="Position2D" parent="ObjectivePositions" index="1"]
position = Vector2( 927.223, -689.499 )

[node name="NightvisionObjective" type="Position2D" parent="ObjectivePositions" index="2"]
position = Vector2( 1476.46, -503.774 )

[node name="LootObjective" type="Position2D" parent="ObjectivePositions" index="3"]
position = Vector2( 1040.98, -131.513 )

[node name="ExitObjective" type="Position2D" parent="ObjectivePositions" index="4"]
position = Vector2( 1316.8, 132.528 )

[node name="ObjectivePointer" type="Sprite" parent="." index="19"]
position = Vector2( 54, -571 )
z_index = 2
texture = ExtResource( 6 )
__meta__ = {
"_edit_group_": true
}

[node name="Light2D" type="Light2D" parent="ObjectivePointer" index="0"]
texture = ExtResource( 6 )
energy = 0.75

[node name="Tween" type="Tween" parent="." index="20"]

[node name="MessageSound" type="AudioStreamPlayer" parent="." index="21"]
stream = ExtResource( 7 )
volume_db = -10.0
[connection signal="body_entered" from="ObjectiveAreas/MoveObjective" to="." method="_on_MoveObjective_body_entered"]
[connection signal="body_entered" from="ObjectiveAreas/DoorObjective" to="." method="_on_DoorObjective_body_entered"]
[connection signal="body_entered" from="ObjectiveAreas/NightvisionObjective" to="." method="_on_NightvisionObjective_body_entered"]
[connection signal="body_entered" from="ObjectiveAreas/BriefcaseObjective" to="." method="_on_BriefcaseObjective_body_entered"]
